--- a/index.html
+++ b/index.html
@@ -86,25 +86,54 @@
    <!-- end header inner -->
    <!-- end header -->
    <!-- banner -->
-   <section class="banner_main">
-      <div id="banner1" class="carousel slide" data-ride="carousel">
-         <ol class="carousel-indicators">
-            <li data-target="#banner1" data-slide-to="0" class="active"></li>
-         </ol>
-         <div class="carousel-inner">
-            <div class="carousel-item active">
-               <div class="container">
-                  <div class="carousel-caption">
-                     <div class="row">
-                        <div class="text_img">
-                           <figure><img src="images/under maintenance.png" alt="#" /></figure>
-                        </div>
-                     </div>
+   <section class="section swiper-container swiper-slider swiper-slider-corporate swiper-pagination-style-2" data-loop="true" data-autoplay="5000" data-simulate-touch="true" data-nav="false" data-direction="vertical">
+      <div class="swiper-wrapper text-left">
+        <div class="swiper-slide context-dark" data-slide-bg="images/carousel/carousel4.jpg">
+          <div class="swiper-slide-caption section-md">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-10">
+                  <h2 class="oh font-weight-light" data-caption-animate="slideInUp" data-caption-delay="100" style="color: white;"><span>Explore</span><span class="font-weight-bold"> Our Products</span></h2>
+                  <div class="col-md-12" style="margin-top: 15px;">
+                     <a class="read_more" href="product.html">Products</a>
                   </div>
-               </div>
+                </div>
+              </div>
             </div>
-         </div>
-   </section>
+          </div>
+        </div>
+        <div class="swiper-slide context-dark" data-slide-bg="images/carousel/carousel5.jpg">
+          <div class="swiper-slide-caption section-md">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-10">
+                  <h2 class="oh font-weight-light" data-caption-animate="slideInUp" data-caption-delay="100" style="color: white;"><span>More</span><span class="font-weight-bold"> About Us</span></h2>
+                  <div class="col-md-12"  style="margin-top: 15px;">
+                     <a class="read_more" href="about.html">About Us</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide context-dark" data-slide-bg="images/carousel/carousel3.jpg">
+          <div class="swiper-slide-caption section-md">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-10">
+                  <h2 class="oh font-weight-light" data-caption-animate="slideInUp" data-caption-delay="100" style="color: white;"><span>Connect</span><span class="font-weight-bold"> With Us</span></h2>
+                  <div class="col-md-12"  style="margin-top: 15px;">
+                     <a class="read_more" href="contact.html">Contact Us</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Swiper Pagination-->
+      <div class="swiper-pagination"></div>
+    </section>
    <!-- end banner -->
 
    <!-- products -->
@@ -203,6 +232,8 @@
    <script src="js/popper.min.js"></script>
    <script src="js/bootstrap.bundle.min.js"></script>
    <script src="js/jquery-3.0.0.min.js"></script>
+   <script src="js/core.min.js"></script>
+    <script src="js/script.js"></script>
    <!-- sidebar -->
    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
    <script src="js/custom.js"></script>
