--- a/sealed_mica_nozzle.html
+++ b/sealed_mica_nozzle.html
@@ -146,7 +146,7 @@
               <input type="submit" class="button" value="Order Now!">
             </form> -->
                         <div class="col-md-12" style="margin-left: -15px;">
-                            <a class="read_more" href="contact.html">Contact US</a>
+                            <a class="read_more" href="contact.html">Contact Us</a>
                         </div>
                         <div class="down-content">
                             <div class="categories">
