--- a/immersion_heater.html
+++ b/immersion_heater.html
@@ -67,10 +67,10 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="about.html">About</a>
-                                    </li>
-                                    <li class="nav-item active">
                                         <a class="nav-link" href="product.html">Products</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -131,22 +131,31 @@
                     <div class="right-content">
                         <h4>Immersion Heater</h4>
                         <h6>$55.00 - $77.00</h6>
-                        <p style="text-align: justify;"> 
-                            SMAJ offers you the most complete selection of quality built heaters extending from basic products for liquid immersion heating to highly engineered process circulating heating systems including power and temperature control instrumentation. 
-                            A variety of designs and large selection of standard physical sizes, watt densities and electrical ratings are available. Electric Process heaters are the most efficient methods for heating water, light to heavy oils, heat transfer fluids,air and other gases and for generating super heated steam.<br><br>
+                        <p style="text-align: justify;">
+                            SMAJ offers you the most complete selection of quality built heaters extending from basic
+                            products for liquid immersion heating to highly engineered process circulating heating
+                            systems including power and temperature control instrumentation.
+                            A variety of designs and large selection of standard physical sizes, watt densities and
+                            electrical ratings are available. Electric Process heaters are the most efficient methods
+                            for heating water, light to heavy oils, heat transfer fluids,air and other gases and for
+                            generating super heated steam.<br><br>
                             <strong>IMMERSION HEATERS TYPICAL CONFIGURATIONS INCLUDE:</strong><br>
                             - Flanged Immersion Heaters<br>
                             - Screw Plug Immersion Heaters<br>
                             - Over-The-Side Immersion Heaters<br>
-                            - Electric Fired Heat Exchangers, also called Circulation Heaters, forced flow through pressure vessels, suction and outflow heaters<br><br>
-                            <strong>IMMERSION HEATERS OFFER A WIDE ARRAY OF SPECIAL FEATURES AND OPTIONS SUCH AS:</strong><br>
+                            - Electric Fired Heat Exchangers, also called Circulation Heaters, forced flow through
+                            pressure vessels, suction and outflow heaters<br><br>
+                            <strong>IMMERSION HEATERS OFFER A WIDE ARRAY OF SPECIAL FEATURES AND OPTIONS SUCH
+                                AS:</strong><br>
                             - Built in thermostats<br>
                             - Built in temperature sensors like thermocouples and RTD's<br>
                             - Fitting materials of steel, brass, stainless steel or other specialized metals<br>
-                            - Heater tube sheath materials include Copper, Steel, Stainless Steel, Incoloy, Titanium, Silica quartz glasstube and Teflon<br><br>
+                            - Heater tube sheath materials include Copper, Steel, Stainless Steel, Incoloy, Titanium,
+                            Silica quartz glasstube and Teflon<br><br>
 
                             <strong>Applications:</strong><br>
-                            Immersion heaters are used for heating a wide range ofliquids and gases in applicationareas like heating of :<br>
+                            Immersion heaters are used for heating a wide range ofliquids and gases in applicationareas
+                            like heating of :<br>
                             - Fuel Oils<br>
                             - Chemicals<br>
                             - Process Water<br>
