--- a/mica_band_heater.html
+++ b/mica_band_heater.html
@@ -67,10 +67,10 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="about.html">About</a>
-                                    </li>
-                                    <li class="nav-item active">
                                         <a class="nav-link" href="product.html">Products</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -147,8 +147,11 @@
                             <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
                             <strong> Internal casing </strong>stainless steel with high thermal conductivity for
                             guaranteed maximum heat transmission to the plasticization cylinders.<br>
-                            <strong> Terminal box </strong>incorporates the junction between power cables and resistive plate. A metallic protection shields.<br>
-                            <strong> Power cable </strong>for high temperature with leads in pure nickel or nickel copper. External fiberglass insulated. External protection in metallic braiding with various options.<br>
+                            <strong> Terminal box </strong>incorporates the junction between power cables and resistive
+                            plate. A metallic protection shields.<br>
+                            <strong> Power cable </strong>for high temperature with leads in pure nickel or nickel
+                            copper. External fiberglass insulated. External protection in metallic braiding with various
+                            options.<br>
                         </p>
                         <span>In stock</span>
                         <!-- <form action="" method="get">
