--- a/micro_coil_heater.html
+++ b/micro_coil_heater.html
@@ -67,10 +67,10 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="about.html">About</a>
-                                    </li>
-                                    <li class="nav-item active">
                                         <a class="nav-link" href="product.html">Products</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="about.html">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact.html">Contact Us</a>
@@ -132,14 +132,23 @@
                     <div class="right-content">
                         <h4>Micro Coil Heater</h4>
                         <h6>$55.00 - $77.00</h6>
-                        <p style="text-align: justify;"> 
-                            SMAJ'S Micro Coil Heater is a high performance heater for smaller diameter Nozzles and Nozzle Tips that can also be formed in grooves to create three dimensional heating applications. 
-                            Owing to their small cross-sectional dimensions, Micro Coil Heater is most often connected at both ends and do not permit the integration of a thermocouple.<br>
-                            The Controlled atmosphere annealing at the end of the manufacturing process allows the bending of this type of Micro Coil Heater into very complex shapes with extremely narrow bending radius. 
-                            Passing through this process helps the Micro Coil Heater have total flexibility in the distribution of heating density on the whole surface of the heated body.<br>
-                            To ensure that the standard 1000 mm PTFE-insulated connection cable can be positioned at one end, despite the standard two-ended connection of the element, in most cases the Micro Coil Heater is formed into a hairpin shape and wound in a parallel format. 
-                            Our unformed Micro Coil Heater is also supplied in the hairpin bend shape as standard. Micro Coil Heater solves heating problems, where space is limited<br><br>
-                            
+                        <p style="text-align: justify;">
+                            SMAJ'S Micro Coil Heater is a high performance heater for smaller diameter Nozzles and
+                            Nozzle Tips that can also be formed in grooves to create three dimensional heating
+                            applications.
+                            Owing to their small cross-sectional dimensions, Micro Coil Heater is most often connected
+                            at both ends and do not permit the integration of a thermocouple.<br>
+                            The Controlled atmosphere annealing at the end of the manufacturing process allows the
+                            bending of this type of Micro Coil Heater into very complex shapes with extremely narrow
+                            bending radius.
+                            Passing through this process helps the Micro Coil Heater have total flexibility in the
+                            distribution of heating density on the whole surface of the heated body.<br>
+                            To ensure that the standard 1000 mm PTFE-insulated connection cable can be positioned at one
+                            end, despite the standard two-ended connection of the element, in most cases the Micro Coil
+                            Heater is formed into a hairpin shape and wound in a parallel format.
+                            Our unformed Micro Coil Heater is also supplied in the hairpin bend shape as standard. Micro
+                            Coil Heater solves heating problems, where space is limited<br><br>
+
                             <strong>Applications:</strong><br>
                             - PET Preform Moulds l Hot Runner Nozzles & Bushings l Thin Walled Container Moulds
                         </p>
