--- a/about.html
+++ b/about.html
@@ -65,11 +65,11 @@
                            <li class="nav-item">
                               <a class="nav-link" href="index.html">Home</a>
                            </li>
-                           <li class="nav-item active">
-                              <a class="nav-link" href="about.html">About</a>
-                           </li>
                            <li class="nav-item">
                               <a class="nav-link" href="product.html">Products</a>
+                           </li>
+                           <li class="nav-item">
+                              <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="contact.html">Contact Us</a>
