--- a/brass_pressed_heater.html
+++ b/brass_pressed_heater.html
@@ -122,8 +122,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="right-content">
-                        <h4>Brass Pressed Heater</h4>
-                        <h6>$55.00 - $77.00</h6>
+                        <h4>Brass Sleeve Heater</h4>
                         <p style="text-align: justify;"> Pressed in brass coil heaters are made of Small Cross Section
                             Micro coil heaters coiled in to a slot of cylindrical brass sleeve and then pressed together
                             for better and efficient heat transfer. The Coil Heating Element is available with an option
@@ -147,7 +146,6 @@
                             <strong>Application: </strong><br>
                             Hot runner system heating of liquids, with tubes, heating of metals, with circular cross section.
                         </p>
-                        <span>In stock</span>
                         <!-- <form action="" method="get">
               <label for="quantity">Quantity:</label>
               <input name="quantity" type="quantity" class="quantity-text" id="quantity"
