--- a/index.html
+++ b/index.html
@@ -152,21 +152,23 @@
                   <div class="row">
                      <div class="col-md-4 margin_bottom1">
                         <div class="product_box">
-                           <figure><img src="pics/ceramic-band-heater.jpg" alt="#" /></figure>
-                           <a href = "ceramic_band_heater.html"><h3>Ceramic Band Heater</h3></a>
-                        </div>
-                     </div>
-                     <div class="col-md-4 margin_bottom1">
-                        <div class="product_box">
                            <figure><img src="pics/cartridge-heater-high-density-.jpg" alt="#" /></figure>
                            <a href = "high_density_cartridge_heater.html"><h3>Cartridge Heater High Density</h3></a>
                         </div>
                      </div>
+                     <div class="col-md-4 margin_bottom1">
+                        <div class="product_box">
+                           <figure><img src="pics/microcoilheaters1.jpg" alt="#" /></figure>
+                           <a href="micro_coil_heater.html">
+                              <h3>Micro Coil Heater</h3>
+                           </a>
+                        </div>
+                     </div>
                      <div class="col-md-4">
                         <div class="product_box">
-                           <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
-                           <a href="sealed_mica_nozzle.html">
-                              <h3>Sealed Mica Nozzle Heater</h3>
+                           <figure><img src="pics/brasspressedheaters1.jpeg" alt="#" /></figure>
+                           <a href="brass_pressed_heater.html">
+                              <h3>Brass Sleeve Heater</h3>
                            </a>
                         </div>
                      </div>
