--- a/product.html
+++ b/product.html
@@ -194,7 +194,7 @@
                            <div class="product_box">
                               <figure><img src="pics/brasspressedheaters1.jpeg" alt="#" /></figure>
                               <a href="brass_pressed_heater.html">
-                                 <h3>Brass Pressed Heater</h3>
+                                 <h3>Brass Sleeve Heater</h3>
                               </a>
                            </div>
                         </div>
