--- a/tubular_heater.html
+++ b/tubular_heater.html
@@ -127,7 +127,7 @@
         </div>
         <div class="col-md-6">
           <div class="right-content">
-            <h4>Finned Tubular Heater</h4>
+            <h4>Tubular Heater</h4>
             <p style = "text-align: justify;">Tubular heaters of any diameter can be finned with steel or stainless steel Finns material to increase the surface area. 
                 Finns can be spiral in shape or punched to suit the application. Designed for rapid uniform heat transfer in air heating ducts. 
                 Also used in blower type comfort heating units, recirculating ovens and other industrial processing equipment and processes requiring heated air.<br><br>
