--- a/product.html
+++ b/product.html
@@ -117,7 +117,7 @@
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
                               <figure><img src="pics/finned-tubular-heaters.jpg" alt="#" /></figure>
-                              <a href = "finned_tubular_heater.html"><h3>Finned Tubular Heaters</h3></a>
+                              <a href = "tubular_heater.html"><h3>Tubular Heaters</h3></a>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
