--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
 <body class="main-layout inner_posituong computer_page">
    <!-- loader  -->
    <div class="loader_bg">
-      <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+      
    </div>
    <!-- end loader -->
    <!-- header -->
@@ -68,7 +69,7 @@
                            <li class="nav-item">
                               <a class="nav-link" href="product.html">Products</a>
                            </li>
-                           <li class="nav-item">
+                           <li class="nav-item active">
                               <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
