--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <body class="main-layout">
    <!-- loader  -->
    <div class="loader_bg">
-      <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+      
    </div>
    <!-- end loader -->
    <!-- header -->
@@ -209,8 +210,10 @@
                <div class="col-md-6 col-sm-6">
                   <h3>Contact Us</h3>
                   <ul class="conta">
-                     <li>Reg. Off:- 3rd Laxmibai Sawant Comp. JBM Road Amboli,<br>
-                        Andheri (W), Mumbai 400058<br>
+                     <li><strong>Unit I</strong> :- 3rd Feku Yadav Comp., Bandivali Hill Road
+                        Jogeshwari (W) Mumbai 400102<br>
+                        <strong>Unit II</strong> :- 8 Landmark Ind. Estate, Near Blue Chip, 
+                        Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
                         Call or whatsapp : +91-9820484156, 9892908010, 9769933505<br>
                         Email us on :- admin@smajheaters.com<br>
                      </li>
