--- a/product.html
+++ b/product.html
@@ -33,7 +33,8 @@
    <body class="main-layout inner_posituong">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+         <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+      
       </div>
       <!-- end loader -->
       <!-- header -->
@@ -61,7 +62,7 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="index.html">Home</a>
                               </li>
-                              <li class="nav-item">
+                              <li class="nav-item active">
                                  <a class="nav-link" href="product.html">Products</a>
                               </li>
                               <li class="nav-item">
