--- a/tubular_heater.html
+++ b/tubular_heater.html
@@ -40,6 +40,10 @@
 </head>
 
 <body>
+  <div class="loader_bg">
+      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+      
+   </div>
   <header>
     <!-- header inner -->
     <div class="header">
