--- a/immersion_heater.html
+++ b/immersion_heater.html
@@ -215,9 +215,13 @@
                     <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                         <h3>About Us</h3>
                         <ul class="about_us">
-                            <li>SMAJ Industries<br> manufactures high-quality heaters and sensors<br> emphasizing
-                                innovation,
-                                client-centric approaches,<br> and timely delivery.</li>
+                            <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
+                                Jogeshwari (W) Mumbai 400102<br>
+                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
+                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
+                                <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
+                                <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-md-6 col-sm-6">
@@ -235,7 +239,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <p>© 2023 All Rights Reserved. Design by<a href="#"> SMAJ Industries</a></p>
+                                <p>© 2023 All Rights Reserved. Design by SMAJ Industries</p>
                             </div>
                         </div>
                     </div>
