--- a/Flexible_heater.html
+++ b/Flexible_heater.html
@@ -208,7 +208,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <p>© 2023 All Rights Reserved. Design by<a href="#"> SMAJ Industries</a></p>
+                                <p>© 2023 All Rights Reserved. Design by SMAJ Industries</p>
                             </div>
                         </div>
                     </div>
