--- a/high_density_cartridge_heater.html
+++ b/high_density_cartridge_heater.html
@@ -205,11 +205,13 @@
              <div class="col-md-6 col-sm-6">
                 <h3>Contact Us</h3>
                 <ul class="conta">
-                   <li>Reg. Off:- 3rd Laxmibai Sawant Comp. JBM Road Amboli,<br>
-                      Andheri (W), Mumbai 400058<br>
-                      Call or whatsapp : +91-9820484156, 9892908010, 9769933505<br>
-                      Email us on :- admin@smajheaters.com<br>
-                   </li>
+                  <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
+                    Jogeshwari (W) Mumbai 400102<br>
+                    <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip, 
+                    Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar  401208 <br>
+                    <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
+                    <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com" style="color: white;">admin@smajheaters.com</a><br>
+                 </li>
                 </ul>
              </div>
           </div>
@@ -217,7 +219,7 @@
              <div class="container">
                 <div class="row">
                    <div class="col-md-12">
-                      <p>© 2023 All Rights Reserved. Design by<a href="#"> SMAJ Industries</a></p>
+                      <p>© 2023 All Rights Reserved. Design by SMAJ Industries</p>
                    </div>
                 </div>
              </div>
