--- a/manifold_heater.html
+++ b/manifold_heater.html
@@ -41,9 +41,9 @@
 
 <body>
     <div class="loader_bg">
-      <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
-      
-   </div>
+        <div class="loader"><img src="images/loading/loading2.gif" alt="#" /></div>
+
+    </div>
     <header>
         <!-- header inner -->
         <div class="header">
@@ -72,10 +72,10 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="product.html">Products</a>
-                                     </li>
-                                     <li class="nav-item">
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link" href="about.html">About</a>
-                                     </li>
+                                    </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="contact.html">Contact Us</a>
                                     </li>
@@ -137,8 +137,10 @@
                             The precision fit optimizes heat transfer to the working surface. Our skilled benders and
                             specialized bending equipment allow us to bend complex shapes. The Manifold Tubular Heating
                             Elements are Custom Designed.<br>
-                            The Manifold Tubular Heating Elements are available in Round diameters of <strong>6.5 mm, 8 mm & 8.5
-                            mm </strong>and in the Square diameters of <strong>6 mm x 6 mm & 8 mm x 8 mm</strong>. Apart from this, other
+                            The Manifold Tubular Heating Elements are available in Round diameters of <strong>6.5 mm, 8
+                                mm & 8.5
+                                mm </strong>and in the Square diameters of <strong>6 mm x 6 mm & 8 mm x 8 mm</strong>.
+                            Apart from this, other
                             diameters can be custom manufactured as per Customers drawings.
                             To Manufacture the Manifold Tubular Heater, it is necessary to have an accurate drawing
                             showing all the Center Distances, Bending Radius & Bending Degree<br>
@@ -192,10 +194,13 @@
                     <div class="col-md-6 col-sm-6">
                         <h3>Contact Us</h3>
                         <ul class="conta">
-                            <li>Reg. Off:- 3rd Laxmibai Sawant Comp. JBM Road Amboli,<br>
-                                Andheri (W), Mumbai 400058<br>
-                                Call or whatsapp : +91-9820484156, 9892908010, 9769933505<br>
-                                Email us on :- admin@smajheaters.com<br>
+                            <li><strong>Unit I</strong> : 3rd Feku Yadav Comp., Bandivali Hill Road
+                                Jogeshwari (W) Mumbai 400102<br>
+                                <strong>Unit II</strong> : 8 Landmark Ind. Estate, Near Blue Chip,
+                                Waliv Phata Sativalli Road, Vasai (E), Dist:- Palghar 401208 <br>
+                                <strong>Call or whatsapp </strong>: +91-9820484156, 9892908010, 9769933505<br>
+                                <strong>Email us on</strong> : <a href="mailto:admil@smajheaters.com"
+                                    style="color: white;">admin@smajheaters.com</a><br>
                             </li>
                         </ul>
                     </div>
@@ -204,7 +209,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <p>© 2023 All Rights Reserved. Design by<a href="#"> SMAJ Industries</a></p>
+                                <p>© 2023 All Rights Reserved. Design by SMAJ Industries</p>
                             </div>
                         </div>
                     </div>
